--- a/myapp/templates/alumni/alumni_notification.html
+++ b/myapp/templates/alumni/alumni_notification.html
@@ -28,30 +28,29 @@
 
           <!------Sidebar---------->
           <div class=" col-xl-2 col-lg-3 col-md-4 sidebar fixed-top">
-            <a href="#" class="navbar-brand text-white d-block mx-auto text-center py-3 mb-4 bottom-border"></a>
+            <a href="#" class="navbar-brand text-white d-block mx-auto text-center py-3 mb-4 bottom-border">My Admin</a>
             <div class="bottom-border pb-3">
               <img src="http://res.cloudinary.com/dfqddpjfl/image/upload/v1494008772/woman1_nr8qgi.jpg" width="50"
                 class="rounded-circle mr-3">
               <a href="#" class="text-white">Ann Smith</a>
             </div>
             <ul class="navbar-nav flex-column mt-4">
-              <li class="nav-item"><a href="{% url 'welcome' session_id %}" class="nav-link text-white p-2 mb-2"><i
+              <li class="nav-item"><a href="{% url 'alumni_mainpage' session_id %}" class="nav-link text-white p-2 mb-2"><i
                     class="fas fa-home text-light fa-lg mr-3"></i>Home</a></li>
-              <li class="nav-item"><a href="{% url 'alumni_list' session_id %}" class="nav-link text-white p-2 mb-2"><i
+              <li class="nav-item"><a href="#" class="nav-link text-white p-2 mb-2"><i
                     class="fas fa-user text-light fa-lg mr-3"></i>Alumni List</a></li>
-              <li class="nav-item"><a href="{% url 'notification_history' session_id %}" class="nav-link text-white p-2 mb-2"><i
+              <li class="nav-item"><a href="#" class="nav-link text-white p-2 mb-2"><i
                     class="fas fa-envelope text-light fa-lg mr-3"></i>News and Events</a></li>
               <li class="nav-item"><a href="#" class="nav-link text-white p-2 mb-2"><i
                     class="fas fa-id-card text-light fa-lg mr-3"></i>Job Opportunities</a></li>
               <li class="nav-item"><a href="#" class="nav-link text-white p-2 mb-2"><i
                     class="fas fa-envelope text-light fa-lg mr-3"></i>Message</a></li>
               <li class="nav-item"><a href="#" class="nav-link text-white p-2 mb-2"><i
-              class="fas fa-user text-light fa-lg mr-3"></i>Interview Experience</a></li>
-              <li class="nav-item"><a href="{% url 'profile' session_id %}" class="nav-link text-white p-2 mb-2"><i
                     class="fas fa-user text-light fa-lg mr-3"></i>Create Profile</a></li>
               <li class="nav-item"><a href="#" class="nav-link text-white p-2 mb-2"><i
                     class="fas fa-id-card text-light fa-lg mr-3"></i>Update Profile</a></li>
-              
+              <li class="nav-item"><a href="#" class="nav-link text-white p-2 mb-2"><i
+                    class="fas fa-user text-light fa-lg mr-3"></i>Interview Experience</a></li>
               <!-- <li class="nav-item"><a href="#" class="nav-link text-white p-2 mb-2"><i class="fas fa-file-alt text-light fa-lg mr-3"></i></a></li> -->
             </ul>
           </div>
