--- a/myapp/templates/st_event_notify.html
+++ b/myapp/templates/st_event_notify.html
@@ -55,7 +55,7 @@ navbar-light bg-primary">
 
   <div class="profile mx-auto">
     <div class="container pt-3">
-      <center><h3></h3></center>
+      <center><h3>Fill the <Details></Details></h3></center>
       <form method="POST">
         {% csrf_token %}
         <div class="form-group">
